@@ -1,10 +1,10 @@
 #!/bin/sh
-topdir=`pwd`
-for x in . mspack src
+# deletes all auto-generated / compiled files
+
+topdir="`pwd`"
+for x in . mspack src test
 do
-  files=`cat .gitignore | sed 's!^/!!'`
-  cd $x
-  chmod -R a+rwx $files 2>/dev/null
-  rm -vrf $files
-  cd $topdir
+  cd "$topdir/$x"
+  chmod -R a+rwx `cat .gitignore` 2>/dev/null
+  rm -vrf `cat .gitignore`
 done
