@@ -1,2 +1,4 @@
 #!/bin/sh
-./cleanup.sh && autoreconf -i -W all && ./configure && make && make -C test && make distcheck 
+# rebuilds the entire project
+
+./cleanup.sh && ./autogen.sh && ./configure && make && make -C test
